[tool.poetry]
name = "Simple API"
version = "0.1.0"
description = ""
authors = ["Simon Tallmyr"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
starlite = {version = "^1.5.3", extras = ["testing"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-github-actions-annotate-failures = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
